# ghc-rewrite-rules-example-interp

./: CHANGELOG.md  README.md  rewrity.cabal
app/: Main.hs
